--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Henry Hogan</h1>
-      <p>I am a <span class="typed" data-typed-items="Senior Mobile Developer,Flutter Developer"></span></p>
+      <p>I am a <span class="typed" data-typed-items="Mobile Engineer,Flutter Developer"></span></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.github.com/HenryEffiong" target="_blank" class="github"><i class="bx bxl-github"></i></a>
