remove unnecessary  info

--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Facts Section ======= -->
-    <section id="facts" class="facts">
+    <!--<section id="facts" class="facts">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -592,7 +592,8 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section -->
+    </section>-->
+  <!-- End Facts Section -->
 
  
 
