--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">FLUTTER <i class="val">95%</i></span>
+              <span class="skill">FLUTTER <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -140,7 +140,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">KOTLIN <i class="val">60%</i></span>
+              <span class="skill">KOTLIN <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -148,14 +148,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">SWIFT <i class="val">20%</i></span>
+              <span class="skill">SWIFT <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">PYHTON <i class="val">50%</i></span>
+              <span class="skill">PYHTON <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -167,7 +167,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">GOLANG <i class="val">40%</i></span>
+              <span class="skill">GOLANG <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -175,7 +175,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">LARAVEL <i class="val">80%</i></span>
+              <span class="skill">LARAVEL <i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -188,7 +188,7 @@
 
 
             <div class="progress">
-              <span class="skill">GITHUB<i class="val">90%</i></span>
+              <span class="skill">GITHUB<i class="val"></i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
