--- a/index.html
+++ b/index.html
@@ -117,90 +117,89 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Skills Section ======= -->
-    <section id="skills" class="skills section-bg">
-      <div class="container" data-aos="fade-up">
+  <!-- ======= Skills Section ======= -->
+<section id="skills" class="skills section-bg py-5">
+  <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Skills</h2>
-          <p>Over the years I have acquired several skills in the field of web development and mobile
-            application development. Some of theses skills are listed below:</p>
+    <div class="section-title">
+      <h2>Skills</h2>
+      <p>Over the years I have acquired several skills in the field of web development and mobile application development. Some of these skills are listed below:</p>
+    </div>
+
+    <div class="row skills-content">
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Cross-Platform Mobile Application Development</h4>
+          <p class="skill-tools">Flutter, Dart</p>
         </div>
-
-        <div class="row skills-content">
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">FLUTTER <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">KOTLIN <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">SWIFT <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-            <div class="progress">
-              <span class="skill">PYHTON <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-          <div class="col-lg-6">
-
-            <div class="progress">
-              <span class="skill">GOLANG <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">LARAVEL <i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-
-
-
-
-
-            <div class="progress">
-              <span class="skill">GITHUB<i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-          </div>
-
-        </div>
-
       </div>
-    </section><!-- End Skills Section -->
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">State Management</h4>
+          <p class="skill-tools">Getx, Provider, Bloc</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Native iOS/Android</h4>
+          <p class="skill-tools">Swift, Kotlin</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Backend Development</h4>
+          <p class="skill-tools">Golang, Firebase, Appwrite, Laravel, Docker, RabbitMQ, Redis, AWS</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Social Media Integration</h4>
+          <p class="skill-tools">Google, Facebook Authentication</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Location Service</h4>
+          <p class="skill-tools">Geolocation, Google Maps & Places APIs</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Programming Languages</h4>
+          <p class="skill-tools">Python, Golang, Solidity</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Development Tools</h4>
+          <p class="skill-tools">Android Studio, Apple Xcode, Postman</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Project Management Tools</h4>
+          <p class="skill-tools">Trello, Asana</p>
+        </div>
+      </div>
+
+      <div class="col-lg-6 mb-4">
+        <div class="skill-item p-3 border rounded bg-white shadow-sm">
+          <h4 class="skill-title">Version Control System</h4>
+          <p class="skill-tools">Git, GitHub, Azure Repos</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section><!-- End Skills Section -->
 
 
 
